--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
-
+########################文件上传配置##################################
 spring.servlet.multipart.max-file-size : 10Mb
 spring.http.multipart.max-request-size : 100Mb
 
+########################数据源##################################
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1/spring_boot?useUnicode=true&characterEncoding=UTF-8&useSSL=false
@@ -10,12 +11,14 @@ spring:
     password: tianxiadiyi55
     type: com.alibaba.druid.pool.DruidDataSource
 
+########################mybatis配置################################
 mybais:
 configuration:
   mapper-locations: classpath*:mapper/*.xml
   typeAliasesPackage: com.fzm.boot.model.po.*
   mapUnderscoreToCamelCase: true
 
+########################Redis#################################
   redis:
     # Redis数据库索引（默认为0）
     database: 0
