--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,32 @@
 spring.servlet.multipart.max-file-size : 10Mb
 spring.http.multipart.max-request-size : 100Mb
 
-########################数据源##################################
+
 spring:
+  ######################数据源################################
   datasource:
     url: jdbc:mysql://127.0.0.1/spring_boot?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     driveClassName: com.mysql.jdbc.Driver
     username: root
     password: tianxiadiyi55
     type: com.alibaba.druid.pool.DruidDataSource
+  ########################redis################################
+  redis:
+    #数据库索引
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password:
+    jedis:
+      pool:
+        #最大连接数
+        max-active: 8
+        #最大阻塞等待时间（负数表示没限制）
+        max-wait: -1ms
+        #最大空闲
+        max-idle: 8
+        #最小空闲
+        min-idle: 0
 
 ########################mybatis配置################################
 mybais:
@@ -18,25 +36,17 @@ configuration:
   typeAliasesPackage: com.fzm.boot.model.po.*
   mapUnderscoreToCamelCase: true
 
-########################Redis#################################
-  redis:
-    # Redis数据库索引（默认为0）
-    database: 0
-    #Redis服务器地址
-    host: localhost
-    # Redis服务器端口
-    port: 6379
-    # Redis服务器连接密码
-    password:
-    jedis:
-      pool:
-        # 连接池最大连接数（使用负值表示没有限制）
-        max-active: 8
-        # 连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-wait: -1ms
-        # 连接池中的最大空闲连接
-        max-idle: 8
-        # 连接池中的最小空闲连接
-        min-idle: 0
-    # 连接超时时间（毫秒）
-    timeout: 5000ms
+
+
+
+
+
+
+
+
+
+
+
+
+
+
