代码迁移+更改包路径

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
 mybais:
 configuration:
   mapper-locations: classpath*:mapper/*.xml
-  typeAliasesPackage: com.fzm.boot.model.po.*
+  typeAliasesPackage: com.mhw.boot.model.po.*
   mapUnderscoreToCamelCase: true
 
 
